# Hopper

./: .gitignore  .vscodeignore  CHANGELOG.md  LICENSE  README.md  esbuild.js  package-lock.json  package.json  tsconfig.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  lint.yml  publish.yml
.planning/: ISSUES.md  PROJECT.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation/: 01-01-ISSUES.md  01-01-PLAN.md  01-01-SUMMARY.md  01-02-FIX-SUMMARY.md  01-02-FIX.md  01-02-ISSUES.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md
contracts/: LICENSE
contracts/license/: Cargo.toml
contracts/license/.cargo/: config.toml
contracts/license/src/: lib.rs
src/: extension.ts  logging.ts
src/auth/: nearAuth.ts
src/chat/: conversationalFollowup.ts  hopperParticipant.ts  specflowParticipant.ts
src/chat/commands/: addPhase.ts  (+24 more)
src/client/: nearAiClient.ts  types.ts
src/config/: configManager.ts  executionGates.ts  index.ts  prompts.ts  selectionUI.ts  types.ts
src/context/: contextTracker.ts
src/licensing/: authManager.ts  nearRpc.ts  phaseGate.ts  types.ts  upgradeModal.ts  validator.ts  walletAuth.ts
src/logging/: index.ts  outputChannel.ts
src/provider/: messageConverter.ts  nearAiProvider.ts
src/security/: advisories.ts  index.ts  scanner.ts  types.ts
src/telemetry/: telemetryService.ts
src/tools/: fileTools.ts  terminalTools.ts
src/utils/: webFetch.ts
workers/: LICENSE
workers/license-api/: .dev.vars  .dev.vars.example  README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
(+275 files in other folders)
