[package]
name = "license"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "5.6"

[dev-dependencies]
near-sdk = { version = "5.6", features = ["unit-testing"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = true

# Build configuration for cargo-near
#
# For local development builds, use:
#   cargo near build non-reproducible-wasm --env 'RUSTFLAGS=-C target-feature=-bulk-memory'
#
# This is required because Rust 1.82+ (LLVM 20) generates bulk memory operations by default,
# but cargo-near < 0.16.0 uses a version of wasm-opt that doesn't enable bulk memory.
# See: https://github.com/rust-lang/rust/issues/141080
#
# For reproducible builds (production), configure the Docker-based build:
[package.metadata.near.reproducible_build]
# Use a recent image that includes cargo-near 0.16.0+ with bulk memory support
image = "sourcescan/cargo-near:0.16.0-rust-1.85.0"
container_build_command = ["cargo", "near", "build", "non-reproducible-wasm", "--locked"]
